--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "version": "0.0.3",
   "description": "Social collaboration tool",
   "permissions": [
-    "scripting"
+    "scripting",
+	"notifications"
   ],
   "icons": {
 	"16": "icon16.png",
